objects/api-gateway/gateway-route.yaml
# kubectl create deployment apache --image=httpd:latest --port=80

# kubectl expose deployment apache --name=apache-service --port=80 --target-port=80 --type=ClusterIP

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: apache-route
  namespace: default
spec:
  parentRefs:
  - name: nginx-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: apache-service
      port: 80
